--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@
 @import "../node_modules/font-awesome/css/font-awesome.css";
 @import "../node_modules/mapbox-gl/dist/mapbox-gl.css";
 @import "../node_modules/mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css";
+@import "./../node_modules/antd/dist/antd.css";
 
 * {
   outline: none;
@@ -974,6 +975,7 @@ input.checked[type="radio"] {
 
 .hero-submain-img {
   border-radius: 5px;
+  margin-bottom: 0.6rem;
   width: 100%;
   height: 49.2%;
 }
@@ -2003,7 +2005,7 @@ input.checked[type="radio"] {
 }
 
 .farCircle {
-  color: #a5a5a5;
+  color: #c7c7c7;
 }
 
 .faCircle:hover::after {
@@ -2041,7 +2043,6 @@ input.checked[type="radio"] {
   right: 10rem;
   z-index: 4;
   width: 28rem;
-  height: 78vh;
   background-color: #f0f0f0;
   border-radius: 0.5rem;
   box-shadow: 0 0 4px rgba(233, 150, 16, 0.603);
@@ -2131,6 +2132,7 @@ input.checked[type="radio"] {
   height: 10vh;
   display: flex;
   width: auto;
+  padding: 0;
   background-color: white;
   border-radius: 0.5rem;
   position: relative;
@@ -2205,11 +2207,11 @@ input.checked[type="radio"] {
 
 .chatbox-1 {
   position: fixed;
-  bottom: 3rem;
-  right: 10rem;
+  bottom: 3.5rem;
+  right: 10.5rem;
   z-index: 4;
-  width: 28rem;
-  height: 78vh;
+  width: 27rem;
+  height: 60.8vh;
   background-color: #00000021;
   border-radius: 0.5rem;
 }
@@ -2276,9 +2278,9 @@ input.checked[type="radio"] {
   }
   .chatbox-1 {
     position: fixed;
-    width: 25rem;
-    bottom: 5rem;
-    right: 6rem;
+    width: 24rem;
+    bottom: 5.4rem;
+    right: 6.5rem;
     z-index: 4;
     background-color: #00000021;
     border-radius: 0.5rem;
@@ -2289,6 +2291,7 @@ input.checked[type="radio"] {
     left: 2.5rem;
     top: 40vh;
   }
+
   .chatbox-typing {
     width: 25rem;
   }
@@ -2334,8 +2337,11 @@ input.checked[type="radio"] {
   font-size: 1.1rem;
   display: flex;
   align-items: center;
-  border-top: 1px solid rgb(216, 216, 216);
+  background-color: white;
+  box-shadow: 0 0 2px rgba(33, 33, 33, 0.603);
   padding: 1rem;
+  margin: 0.5rem 0;
+  border-radius: 0.5rem;
   position: relative;
 }
 
@@ -2382,8 +2388,4 @@ input.checked[type="radio"] {
   .chabox-username {
     width: 13rem;
   }
-}
-
-.height {
-  height: 66.5vh;
 }
