--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -694,8 +694,7 @@ textarea {
 }
 
 .control-title {
-  margin: 0.5rem 0.5rem 0.5rem 0;
-  padding-left: 0.5rem;
+  margin: 0.5rem 1rem 0.5rem 1rem;
 }
 
 .control-page-header {
