--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -167,12 +167,21 @@ textarea {
     margin: 0;
   }
   .header-link-item {
-    top: -0.2rem;
-    right: 1rem;
+    top: -0.1rem;
+    right: 0.3rem;
     color: #fff;
     padding: 0;
     background-color: rgba(255, 255, 255, 0);
+    color: white;
+    border-radius: 3rem;
+    border: 1px solid white;
+    background-color: #ff4d4f;
+    display: inline-flex;
+    cursor: pointer;
+    font-size: 12px;
+    padding: 0 0.6rem;
   }
+
   .header-link-item:hover {
     background-color: rgba(255, 255, 255, 0);
     color: #ffffff;
@@ -316,6 +325,9 @@ textarea {
 @media screen and (max-width: 600px) {
   .product-price {
     font-size: 2rem;
+  }
+  .before-discount {
+    font-size: 1.8rem;
   }
   .product-discount {
     left: 0.5rem;
@@ -1051,11 +1063,13 @@ input.checked[type="radio"] {
   color: #000000;
   z-index: 10;
   left: 40vw;
+  width: 30rem;
 }
 
 @media screen and (max-width: 600px) {
   .action-note {
-    left: 20vw;
+    width: 28rem;
+    left: 11vw;
   }
 }
 
@@ -1138,9 +1152,7 @@ input.checked[type="radio"] {
 
 .add-to-cart-btns {
   display: flex;
-  flex-direction: row;
   align-items: center;
-  justify-content: space-between;
   margin: 0;
 }
 
@@ -1161,11 +1173,12 @@ input.checked[type="radio"] {
   border: 0;
   border-radius: 0.5rem;
   color: white;
-  margin: 0;
 }
 
 .add-to-cart-qty {
-  padding: 0.5rem 2rem 0.5rem 2rem;
+  margin-top: 1.2rem;
+  padding: 1rem 0;
+  width: 5rem;
 }
 
 .minus:hover,
@@ -1178,7 +1191,7 @@ input.checked[type="radio"] {
   display: none;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 700px) {
   .add-to-cart-btn {
     padding: 1rem 4rem 1rem 4rem;
     font-size: 1.5rem;
@@ -1188,7 +1201,7 @@ input.checked[type="radio"] {
   .minus,
   .plus {
     padding: 1.2rem 2rem 1.2rem 2rem;
-    margin: 1.5rem 0 1.9rem 0;
+    margin: 1.5rem 0 1.7rem 0;
   }
 
   .add-to-cart-qty {
@@ -2298,10 +2311,10 @@ input.checked[type="radio"] {
     width: 25rem;
   }
   .chatbox-unseen-msg {
-    bottom: 45.7vh;
+    bottom: auto;
+    margin-top: -1rem;
     z-index: 12;
     font-size: 12px;
-    top: 51vh;
     right: 0.3rem;
     padding: 0 0.6rem;
   }
