--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -885,7 +885,7 @@ select {
 
 .table {
   width: 77vw;
-  padding-left: 1rem;
+  margin-left: 0.5rem;
 }
 
 th {
@@ -2448,4 +2448,16 @@ input.checked[type="radio"] {
   border-radius: 0.5rem;
   padding: 1rem;
   background-color: #f9f9f9;
+}
+
+.grey {
+  color: grey;
+}
+
+.green {
+  color: green;
+}
+
+.red {
+  color: red;
 }
