--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2451,7 +2451,7 @@ input.checked[type="radio"] {
 }
 
 .grey {
-  color: grey;
+  color: rgb(189, 189, 189);
 }
 
 .green {
@@ -2460,4 +2460,40 @@ input.checked[type="radio"] {
 
 .red {
   color: red;
+}
+
+.timer {
+  font-size: 1.1rem;
+  position: absolute;
+  bottom: -0.3rem;
+  width: 10rem;
+  left: -1px;
+  color: white;
+  background-color: rgb(0, 163, 0);
+  border-radius: 0 0 0.5rem 0.5rem;
+}
+
+.checkin-btn {
+  width: 10rem;
+  position: relative;
+  text-align: center;
+  height: 5rem;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+}
+
+.red-background {
+  background-color: red;
+}
+
+.line {
+  width: 100%;
+  height: 0;
+  border-bottom: 1px dashed rgb(167, 167, 167);
+  float: left;
+  margin: 0;
+  position: absolute;
+  z-index: 0;
+  top: 50%;
+  left: 0;
 }
