--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2454,10 +2454,6 @@ input.checked[type="radio"] {
   color: rgb(189, 189, 189);
 }
 
-.green {
-  color: green;
-}
-
 .red {
   color: red;
 }
@@ -2490,10 +2486,11 @@ input.checked[type="radio"] {
   width: 100%;
   height: 0;
   border-bottom: 1px dashed rgb(167, 167, 167);
-  float: left;
   margin: 0;
   position: absolute;
   z-index: 0;
   top: 50%;
   left: 0;
+  text-align: center;
+  font-size: 1.2rem;
 }
