--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,10 @@
 @import "../node_modules/mapbox-gl/dist/mapbox-gl.css";
 @import "../node_modules/mapbox-gl-geocoder/dist/mapbox-gl-geocoder.css";
 @import "./../node_modules/antd/dist/antd.css";
+@import "../node_modules/flat-icons/ecommerce.css";
+@import "../node_modules/flat-icons/interface.css";
+@import "../node_modules/flat-icons/technology.css";
+@import "../node_modules/flat-icons/creative.css";
 
 * {
   outline: none;
@@ -2493,4 +2497,27 @@ input.checked[type="radio"] {
   left: 0;
   text-align: center;
   font-size: 1.2rem;
+}
+
+.highlight {
+  color: red;
+}
+
+.request-btn {
+  cursor: pointer;
+  background-color: #f0c040;
+  border-radius: 0.5rem;
+  border: 1px solid #808080;
+}
+
+.request-line {
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 0.5rem;
+  background-color: #f0f0f0;
+}
+
+.request-user {
+  font-size: 1.1rem;
 }
