--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -635,6 +635,9 @@ textarea {
   flex: 1 1;
   margin: 1rem;
   min-width: 10rem;
+  min-height: 10rem;
+  align-items: center;
+  display: flex;
 }
 
 .cart-name {
@@ -3112,7 +3115,7 @@ textarea {
 
 .status-border div {
   text-align: center;
-  border-bottom: 1px solid #c0c0c0;
+  border-bottom: 1px solid #d2d2d2;
   padding: 0.8rem 0;
 }
 
@@ -3148,7 +3151,7 @@ textarea {
 
 .align-width {
   text-align: center;
-  width: 10rem;
+  width: 8.5rem;
 }
 
 .text-align-start div {
@@ -3174,4 +3177,12 @@ textarea {
 
 .width-7rem {
   width: 7rem;
+}
+
+.width-5rem {
+  width: 5rem;
+}
+
+.font-size-1p3 {
+  font-size: 1.5rem;
 }
