--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1087,8 +1087,8 @@ input.checked[type="radio"] {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  top: 0;
-  border-radius: 0 0 0.5rem 0.5rem;
+  top: 0.5rem;
+  border-radius: 0.5rem;
   padding: 1rem;
   background-color: #f0c040;
   color: #000000;
@@ -3151,7 +3151,7 @@ textarea {
 
 .align-width {
   text-align: center;
-  width: 8.5rem;
+  width: 9.2rem;
 }
 
 .text-align-start div {
