--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1094,7 +1094,7 @@ input.checked[type="radio"] {
   color: #000000;
   z-index: 10;
   left: calc((100vw - 35rem) / 2);
-  width: 35rem;
+  width: 40rem;
   box-shadow: 0 0 4px rgba(33, 33, 33, 0.431);
 }
 
@@ -3005,7 +3005,7 @@ textarea {
 }
 
 .status-container {
-  margin: 1rem 0 2rem 0;
+  margin: 0 0 2rem 0;
   padding: 0.5rem 0.5rem 0.5rem 0.8rem;
 }
 
@@ -3176,7 +3176,7 @@ textarea {
 
 .align-right {
   text-align: right;
-  padding-right: 0.4rem;
+  padding-right: 0.8rem;
 }
 
 .width-7rem {
@@ -3257,4 +3257,163 @@ input[type="number"] {
 .flex-center {
   display: flex;
   align-items: center;
+}
+
+.flex-center button {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.td-selects select {
+  width: 13rem;
+}
+
+.set-btn {
+  margin: 0.3rem;
+  margin-right: 0;
+  padding: 0.9rem 1.2rem;
+  font-size: 1.4rem;
+}
+
+.accept-btn {
+  width: 13rem;
+  padding: 0.9rem 1.2rem;
+  border-radius: 0.5rem;
+  border: 1px solid #c0c0c0;
+  background-color: white;
+  cursor: pointer;
+  text-align: left;
+}
+
+.ass-onhold,
+.ass-onhold button,
+.ass-onhold select {
+  color: #8a8a8a;
+  background-color: #ffffff;
+}
+
+.ass-form-hovered:hover {
+  background-color: #f8f8f8;
+  padding: 0 0.2rem;
+  border-radius: 0.2rem;
+}
+
+.receipt-title {
+  margin-top: 2rem;
+}
+
+.employee-name-dorpdown select {
+  font-size: 1.2rem;
+  width: 17rem;
+}
+
+.margin-top-1rem {
+  margin-top: 0 !important;
+}
+
+.packed-btn {
+  position: absolute;
+  width: 81%;
+  height: 100%;
+  left: 0;
+  cursor: pointer;
+  border-radius: 0.5rem 0 0 0.5rem;
+  text-align: center;
+  line-height: 1.5rem;
+  padding-top: 3.5rem;
+  color: white;
+  font-size: 1.4rem;
+}
+
+.packed-background {
+  background-color: rgba(0, 0, 0, 0.239);
+}
+
+.show-ass {
+  position: relative;
+}
+
+.ass-count {
+  position: absolute;
+  top: -1rem;
+  right: -0.8rem;
+  padding: 0 0.7rem;
+  background-color: red;
+  color: white;
+  font-size: 1.3rem;
+  border-radius: 1rem;
+}
+
+.hidden-list {
+  position: absolute;
+  left: 84rem;
+  background-color: #f0f0f0e1;
+  padding: 0.5rem;
+  border: 1px solid #808080;
+  border-radius: 0.5rem;
+  top: 7.5rem;
+  font-size: 1.1rem !important;
+  width: 16rem;
+}
+
+.hidden-ass-line {
+  display: flex;
+  align-items: center;
+  padding: 0.2rem 0;
+}
+
+.hidden-ass-type {
+  padding: 0 1rem;
+}
+
+.faEye {
+  cursor: pointer;
+  margin-left: 0.3rem;
+}
+
+.faEye:hover {
+  color: #f0c040;
+}
+
+.relative {
+  position: relative;
+}
+
+.td-selects select:hover {
+  border: 1px solid #404040;
+}
+
+.border-red {
+  border: 2px solid red;
+}
+
+.green-border {
+  border: 2px solid rgb(0, 143, 0);
+}
+
+.green {
+  color: green;
+}
+
+.cancel-req button {
+  width: 100%;
+}
+
+.cancel-req .width {
+  margin-top: 1rem;
+}
+
+.cancel-req {
+  border: 1px solid #c0c0c0;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  padding-bottom: 1rem;
+}
+
+.product img:hover {
+  padding-bottom: 0.5rem;
+}
+
+.relative {
+  width: 78%;
 }
